Initial nav bar, buttons based on logged in status

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,1 +1,39 @@
-<h1>Test header</h1>
+<header class="bg-secondary py-4">
+  <div class="container d-flex justify-content-between align-items-center">
+    <!-- Title -->
+    <h1 class="text-white m-0">PadelHub</h1>
+
+    <!-- Navigation -->
+    <nav class="d-flex align-items-center">
+      <ul class="nav me-3">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            data-bs-toggle="dropdown"
+            id="dropdownMenu"
+          >
+            <i class="fa-solid fa-store"></i>
+            <span class="ms-2">Shop</span>
+          </a>
+
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Rackets</a></li>
+            <li><a class="dropdown-item" href="#">Equipment</a></li>
+            <li><a class="dropdown-item" href="#">Clothing</a></li>
+            <li><a class="dropdown-item" href="#">Training</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item" href="#">All categories</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-white">Watch</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-white">Contact</a>
+        </li>
+      </ul>
+
+      <login-block></login-block>
+    </nav>
+  </div>
+</header>
